--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Justnote.cc - A simple, fast, privacy-focused note taking app</title>
+    <title>Justnote - A simple, fast, privacy-focused note taking app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
