--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="min-h-screen antialiased"></div>
+    <div id="root" class="antialiased"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
