--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -6,7 +6,27 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="A simple, fast, privacy-focused note taking app" />
+    <meta name="description" content="A simple, fast, privacy-focused note taking app that you can use it easily, take a note rapidly, and importantly, have full control of your data." />
+
+    <meta name="twitter:site" content="@justnotecc" />
+    <meta name="twitter:title" content="Justnote - Simple & Private Taking Notes" />
+    <meta name="twitter:url" content="https://justnote.cc" />
+    <meta name="twitter:description" content="A simple, fast, privacy-focused note taking app that you can use it easily, take a note rapidly, and importantly, have full control of your data." />
+    <meta name="twitter:image" content="https://justnote.cc/twitter-card-image-pattern1.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <meta property="og:site_name" content="Justnote" />
+    <meta property="og:title" content="Justnote - Simple & Private Taking Notes" />
+    <meta property="og:url" content="https://justnote.cc" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="A simple, fast, privacy-focused note taking app that you can use it easily, take a note rapidly, and importantly, have full control of your data." />
+    <meta property="og:image" content="https://justnote.cc/twitter-card-image-pattern1.png" />
+    <meta property="og:image:url" content="https://justnote.cc/twitter-card-image-pattern1.png" />
+
+    <meta itemprop="name" content="Justnote" />
+    <meta itemprop="headline" content="Justnote - Simple & Private Taking Notes" />
+    <meta itemprop="description" content="A simple, fast, privacy-focused note taking app that you can use it easily, take a note rapidly, and importantly, have full control of your data." />
+    <meta itemprop="image" content="https://justnote.cc/twitter-card-image-pattern1.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
@@ -23,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Justnote - A simple, fast, privacy-focused note taking app</title>
+    <title>Justnote - Simple & Private Taking Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
