--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -45,9 +45,9 @@
     -->
     <title>Justnote - Simple & Private Taking Notes</title>
   </head>
-  <body>
+  <body class="antialiased overflow-hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="antialiased"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
