Fix overflow-hidden on body only when rendering Main

--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -45,7 +45,7 @@
     -->
     <title>Justnote - Simple & Private Taking Notes</title>
   </head>
-  <body class="antialiased overflow-hidden">
+  <body class="antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
