--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(17, 24, 39)" />
     <meta name="description" content="A simple, fast, privacy-focused note-taking app that you can use easily, take notes rapidly, and, importantly, truly own your account and data." />
 
     <meta name="twitter:site" content="@justnotecc" />
